Replace Java 11 code with Java 8 equivalent